# llm-security-reviewer

./: .env.example  .gitignore  DESIGN.md  PLAN.md  README.md  pyproject.toml
evals/: curate.py  manifest.py  matching.py  metrics.py  run_eval.py  synthesize.py
evals/dataset/: manifest.json
evals/dataset/diffs/: sample_secret_js.diff  sample_sqli_py.diff
evals/dataset/prefix/app/: db.py
evals/dataset/prefix/web/: config.js
scripts/: smoke_cli.py  smoke_curate.py  smoke_diff.py  smoke_github.py  smoke_matching.py  smoke_metrics.py  smoke_models.py  smoke_openai_provider.py  smoke_prompts.py  smoke_providers.py  smoke_reviewer.py  smoke_run_eval.py  smoke_semgrep.py  smoke_synthesize.py
src/secreview/: cli.py  diff.py  github_client.py  models.py  prompts.py  report.py  reviewer.py  semgrep_runner.py
src/secreview/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
