[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secreview"
version = "0.1.0"
description = "LLM-assisted security code reviewer with Semgrep-benchmarked evals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ananya Uppal" }]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "unidiff>=0.7.5",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
eval = [
    "pandas>=2.2.0",
    "semgrep>=1.80.0",
]

[project.scripts]
secreview = "secreview.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/secreview"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]